# waytab

./: .gitignore  README.md  flake.nix
backend/: Cargo.toml  build.rs  driver.c  driver.h
backend/src/: comms.rs  main.rs  networking.rs  stream.rs  uinput.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.svelte  app.css
mobile/: settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/kamwithk/waytab/: InputCapture.kt  MainActivity.kt  RtspScreen.kt  ServerController.kt
mobile/app/src/main/java/com/kamwithk/waytab/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile/app/src/main/res/values/: strings.xml  themes.xml
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
