[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
tungstenite = "0.24.0"
tokio-tungstenite = "0.24.0"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
serde_json = "1.0.113"

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.27"
