[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
tungstenite = "0.24.0"
tokio-tungstenite = "0.24.0"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
serde_json = "1.0.113"
ashpd = { version = "0.11.0", features = ["tokio", "pipewire"] }
pipewire = "0.8.0"
gstreamer = "0.23.7"
gstreamer-rtsp-server = "0.23.5"
anyhow = "1.0.98"

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.27"

[features]
option-as-array = []
